testsuite/tests/typecheck/should_fail/tcfail014.hs
module ShouldFail where

f x = g+1
      where g y = h+2
                  where h z = z z
