testsuite/tests/typecheck/should_fail/tcfail014.stderr

tcfail014.hs:5:33: error:
    • Couldn't match expected type ‘t7’ with actual type ‘t7 -> t8’
      ‘t7’ is a rigid type variable bound by
        the inferred type of h :: (t7 -> t8) -> t8
        at tcfail014.hs:5:25-33
    • In the first argument of ‘z’, namely ‘z’
      In the expression: z z
      In an equation for ‘h’: h z = z z
    • Relevant bindings include
        z :: t7 -> t8 (bound at tcfail014.hs:5:27)
        h :: (t7 -> t8) -> t8 (bound at tcfail014.hs:5:25)
